repair display contacts, remove log in msg, repair scrollbar

--- a/css/contacts.css
+++ b/css/contacts.css
@@ -374,3 +374,7 @@ input {
 .overlay-create-contact-button {
   height: 100%;
 }
+
+.handle-resp-contact-container{
+  display: none;
+}
